Complete styling for the css
Delete <div> on index
Add link to CSS file on all recipes

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
+* {
+    font-size: 16px;
+}
+
 h1 {
     color: darkred;
-    font-size: 24;
+    font-size: 32px;
+}
+
+li {
+    list-style-type: circle;
+    font-family: Recursive, 'ia Writer Duo', sans-serif;
+    font-size: 16px;
+    color: gray;
+}
+
+a {
+    text-decoration: none;
 }
